tests/parsing/cmc/errors/159.expected
File "tests/parsing/cmc/errors/159.cmc", line 1, character 36-37:
1 | (check-system sys :queries ((q (r)) x))
                                        ^
Error while parsing a system query list, read the symbol 'x',
      but expected a system query definition or closing parenthesis.
